css/styles.css
/* Imports */
@import url("https://fonts.googleapis.com/css?family=Montserrat:400,700");

/* base style */
*{
    box-sizing: border-box;
}
body{
    margin: 0;
    font-family: Montserrat, sans-serif;
    text-align: center;
    background-color: rgb(250, 250, 250);
    line-height: 1.5;
    height: 100vh;
}

a{
    text-decoration: none;
    color: rgb(75, 75, 75);
    font-weight: bold;
}

ul{
    list-style-type: none;
    margin: 0;
    padding-left: 0;
}

ul li a{
    color: rgb(75, 75, 75);
}

img{
    max-width: 100%;
}

p{
    color: rgba(75, 75, 75, 0.678);
}
/* layout styles */
.wrap{
    margin: 0 1em;
    margin-bottom: 70px;
}

.main-nav{
    min-height: 200px;
    margin-bottom: 50px;
}
.name{
    font-size: 1.5em;
}

.nav li{
    background-color: #fff;
    padding: 20px 40px;
    margin-bottom: 10px;
    font-weight: 700;
    text-transform: uppercase;
}

.content {
    background-color: #fff;
    padding: 40px 20px;
}


/* element style */

.profile-img {
    max-width: 80%;
}

.banner {
    margin: 80px 40px;
    font-size: 1.3em;
}
.intro {
    margin-top: 20px;
}

.content-intro, .footer-intro {
    font-weight: bold;
    text-transform: uppercase;
    color: rgb(75, 74, 74);
    margin-bottom: 50px;
}

.card {
    margin: 20px 0;
}
.card-header{
    color: rgb(75, 75, 75);
}

.main-footer{
    width: 96%;
    margin: 0 auto;
}

.info {
    font-weight: bold;
    color: rgb(102, 100, 100);
}

.bot-footer {
    border-top: 1px solid rgba(109, 108, 108, 0.1);
}

.footer-name{
    float: left;
}

.footer-nav{
    float: right;
}

.footer-nav li{
    float: left;
    margin-right: 10px;
    padding: 20px 10px;
    display: none;
}

.link{
    float: right;
    display: inline-block;
    padding: 20px 10px;
}

/* Media Queries */
@media (min-width: 768px){
    .nav {
        display: flex;
        justify-content: center;
    }
    
    .nav li{
        background-color: rgb(250, 250, 250);
    }

    .banner{
        display: flex;
        flex-direction: row-reverse;
    }

    .profile-img {
        margin-left: 20px;
    }

    .row {
        display: flex;
        flex-wrap: wrap;
        justify-content: space-around;
    }

    .card {
        flex-basis: 45%;
    }

    .footer-description {
        max-width: 500px;
        margin: 0 auto;
        margin-bottom: 30px;
    }

    .hide {
        display: none; /* hide the link  button at buttom*/
    }

    .footer-nav li{
        display: block;
    }

}

@media (min-width: 1024px){
    .wrap {
        max-width: 1200px;
        max-height: 100vh;
        margin: 0 auto;
    }

    .main-nav {
        display: flex;
        justify-content: space-around;
    }

    .name {
        margin-right: auto;
        margin-top: .4em;
        margin-left: 4em;
    }

    .intro{
        text-align: left;
        max-width: 50%;
        margin: 0 auto;
    }

    .card {
        flex-basis: 360px;
    }
}

